fix hero width on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -370,6 +370,7 @@ html#mobileView,
     display: none;
 }
 #mobileView #hero {
+    width: 100%;
     height: 90vh;
     position: relative;
     display: block;
